@@ -1,7 +1,11 @@
 2009-08-07  Christian Hoff  <christian_hoff@gmx.net>
 
+	* gtk/glue/clipboard.c: Kill as it is not used any more.
+
+2009-08-07  Christian Hoff  <christian_hoff@gmx.net>
+
 	* gtk/SelectionData.custom: Use gtk_selection_data_get_data instead
-	of a glue func to acces the data field.
+	of a glue func to access the data field.
 
 2009-08-05  Christian Hoff  <christian_hoff@gmx.net>
 
